Test Org - Speridian/src/objects/ba_QuoteRequestClassPackage__c.object
<CustomObject>
    <fields>
        <fullName>ba_ClassID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class ID</label>
        <referenceTo>ba_Quote_Request_Class__c</referenceTo>
        <relationshipLabel>Quote Request Class Package</relationshipLabel>
        <relationshipName>Quote_Request_Class_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Policy Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PredefinedPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Package</label>
        <referenceTo>BA_Product_Flat__c</referenceTo>
        <relationshipLabel>Quote Request Class Package</relationshipLabel>
        <relationshipName>Quote_Request_Class_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Request Class Package</relationshipLabel>
        <relationshipName>Quote_Request_Class_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTerminationDate__c</fullName>
        <label>Rate Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Policy Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Quote Request Class Package</label>
    <nameField>
        <label>Quote Request Class Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Request Class Package</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>